Update hone layout

--- a/android-project/res/layout/home.xml
+++ b/android-project/res/layout/home.xml
@@ -2,7 +2,13 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
-  android:layout_width="fill_parent"
+  android:layout_width="match_parent"
   android:layout_height="wrap_content"
 >
+  <Button
+    android:id="@+id/reportButton"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/Home_report_button"
+  />
 </LinearLayout>
