--- a/android-project/res/layout/createpoireport.xml
+++ b/android-project/res/layout/createpoireport.xml
@@ -39,7 +39,7 @@
       android:layout_marginLeft="10dip"
       android:text="Type d'incident :"
     />
-	  <Spinner
+	  <Button
 	    android:id="@+id/type"
       android:layout_marginTop="10dip"
 	    android:layout_width="match_parent"
