--- a/android-project/res/layout/home.xml
+++ b/android-project/res/layout/home.xml
@@ -4,11 +4,57 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
+  android:gravity="center_horizontal"
+  android:padding="20dip"
 >
   <Button
     android:id="@+id/reportButton"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/Home_report_button"
+    android:drawableTop="@drawable/report"
+    android:background="@drawable/abs__tab_indicator_holo"
+    android:padding="20dip"
   />
+  
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center_horizontal"
+    android:paddingTop="20dip"
+  >
+    <Button
+      android:id="@+id/agentButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:text="@string/Home_mode_agent"
+      android:drawableTop="@drawable/agent"
+      android:background="@drawable/abs__tab_indicator_holo"
+      android:padding="10dip"
+    />
+    <Button
+      android:id="@+id/settingsButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:text="@string/Home_settings"
+      android:drawableTop="@drawable/settings"
+      android:background="@drawable/abs__tab_indicator_holo"
+      android:padding="10dip"
+      android:layout_marginLeft="10dip"
+      android:layout_marginRight="10dip"
+    />
+    <Button
+      android:id="@+id/paypalButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:text="@string/Home_support"
+      android:drawableTop="@drawable/paypal"
+      android:background="@drawable/abs__tab_indicator_holo"
+      android:padding="10dip"
+    />
+  </LinearLayout>
 </LinearLayout>
